k8s/traefik-ingress.yaml
apiVersion: v1
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
    kubernetes.io/cluster-service: "true"
spec:
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
        version: v1.1.0-rc3
    spec:
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      nodeSelector:
        ingress: true
      containers:
      - image: traefik:v1.1.0-rc3
        name: traefik-ingress-lb
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8080
        args:
        - --web
        - --kubernetes
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: traefik-ingress-lb
  name: traefik-ingress
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    k8s-app: traefik-ingress-lb
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  namespace: kube-system
spec:
  rules:
    - host: traefik.k8s
      http:
        paths:
        - path: /
          backend:
            serviceName: traefik-ingress
            servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: kubernetes-dashboard-ingress
 namespace: kube-system
spec:
 rules:
   - host: dashboard.k8s
     http:
       paths:
         - path: /
           backend:
             serviceName: kubernetes-dashboard
             servicePort: 80
